Implemented categories display from MongoDB
